<resources>
    <string name="app_name">Week 2</string>
    <string name="text1">Hi. My name is :</string>
    <string name="text2">My age is :</string>
    <string name="text3">Here is a list of my favourite food :</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_name">Enter Name</string>
    <string name="button_next">Go Next</string>
    <string name="textViewName">Hi. My name is :</string>
    <string name="textViewAge">"This is my age : "</string>
    <string name="tvCuteDog">Here is a list of cute dogs :</string>


</resources>
